[package]
name = "rue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.18"
crossterm = "0.24"
reqwest = {version = "0.11.8",features = ["json","blocking"]}
tokio = { version = "1.15.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }

serde_json = "1.0.59"
futures = "0.3"
dirs = "4.0.0"
log = "0.4.17"
mdns = "3.0.0"
