[package]
name = "rue"
version = "0.1.0"
edition = "2021"


[dependencies]
tui = "0.18"
crossterm = "0.24"
reqwest = {version = "0.11.8",features = ["json","blocking"]}
tokio = { version = "1.20.4", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }

serde_json = "1.0.59"
futures = "0.3"
dirs = "4.0.0"
log = "0.4.17"

# Currently downgraded due to https://github.com/dylanmckay/mdns/issues/26
mdns = "1.0.2"
anyhow = "1.0.69"
thiserror = "1.0.38"
simple-mdns = { version = "0.4.0", features = ["sync"] }
