[package]
name = "rue"
version = "0.1.0"
edition = "2021"


[dependencies]
crossterm = "0.24"
reqwest = {version = "0.11.8",features = ["json","blocking"]}
tokio = { version = "1.20.4", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }

serde_json = "1.0.59"
futures = "0.3"
dirs = "4.0.0"
log = "0.4.17"

# Currently downgraded due to https://github.com/dylanmckay/mdns/issues/26
mdns = "2.0.2"
anyhow = "1.0.69"
thiserror = "1.0.38"
ratatui = "0.25.0"
tracing-error = "0.2.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
directories = "5.0.1"
lazy_static = "1.4.0"
color-eyre = "0.6.2"
